--- a/src/app/secure/header/header.component.html
+++ b/src/app/secure/header/header.component.html
@@ -1,5 +1,5 @@
 
-<header class="flex justify-between items-center">
+<header class="flex column justify-between items-center">
     <section class="flex justify-between items-center w-100">
         <div class="call-details">
             <i class="fa fa-phone"></i>
@@ -15,7 +15,18 @@
     </section>
     <section>
         <div>
+            <!-- <img src="../../../assets/images/logo.png"> -->
             
+            <ng-container *ngFor="let menuItem of dropdownMenu">
+                <button mat-icon-button [matMenuTriggerFor]="menu">
+                   {{menuItem.title}}
+                  </button>
+                  <mat-menu #menu="matMenu">
+                    <button *ngFor="let item of menuItem.subMenu.list" mat-menu-item>
+                      <span>{{item}}</span>
+                    </button>
+                  </mat-menu>
+            </ng-container>
         </div>
     </section>
 </header>
