--- a/src/assets/styles/_layout.scss
+++ b/src/assets/styles/_layout.scss
@@ -1,5 +1,8 @@
 .flex {
     display: flex;
+    &.column {
+        flex-direction: column;
+    }
     &.justify-between {
         justify-content: space-between;
     }
