--- a/src/app/secure/header/header.component.scss
+++ b/src/app/secure/header/header.component.scss
@@ -21,6 +21,11 @@ header {
     padding: $spacing-xl 0;
     button {
         color: $white;
+        cursor: pointer;
+        &:hover {
+          color: $light-grey;
+
+        }
     }
     .icons-container {
         color: $white;
@@ -40,4 +45,13 @@ header {
         font-size: 1rem;
     }
 }
+}
+.dropdown-option {
+  text-transform: capitalize;
+  font-size: 1rem;
+  font-weight: 500;
+  &:hover {
+    color: $light-grey;
+    cursor: pointer;
+  }
 }
