--- a/src/assets/styles/_layout.scss
+++ b/src/assets/styles/_layout.scss
@@ -1,22 +1,65 @@
 .flex {
-    display: flex;
-    &.column {
-        flex-direction: column;
-    }
-    &.justify-between {
-        justify-content: space-between;
-    }
-    &.justify-center {
-        justify-content: center;
-    }
-    &.items-center {
-        align-items: center;
-    }
-    &.flex-1 {
-        flex:1;
-    }
+  display: flex !important;
+  &.column {
+    flex-direction: column;
+  }
+  &.justify-between {
+    justify-content: space-between;
+  }
+  &.justify-center {
+    justify-content: center;
+  }
+  &.items-center {
+    align-items: center;
+  }
+  &.flex-1 {
+    flex: 1;
+  }
 }
 
 .w-100 {
-    width: 100%;
-} 
+  width: 100%;
+}
+.h-100 {
+  height: 100%;
+}
+$space-amounts: (0, 1, 2, 3, 4, 5, 6, 7, 8);
+
+@each $space in $space-amounts {
+  //margin classes
+  .m-#{$space} {
+    margin: #{$space}rem;
+  }
+  .ml-#{$space} {
+    margin-left: #{$space}rem;
+  }
+  .mt-#{$space} {
+    margin-top: #{$space}rem;
+  }
+  .mr-#{$space} {
+    margin-right: #{$space}rem;
+  }
+  .mb-#{$space} {
+    margin-bottom: #{$space}rem;
+  }
+  //padding classes
+  .p-#{$space} {
+    padding: #{$space}rem;
+  }
+  .pl-#{$space} {
+    padding-left: #{$space}rem;
+  }
+  .pt-#{$space} {
+    padding-top: #{$space}rem;
+  }
+  .pr-#{$space} {
+    padding-right: #{$space}rem;
+  }
+  .pb-#{$space} {
+    padding-bottom: #{$space}rem;
+  }
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
