--- a/src/app/secure/top-categories/top-categories.component.html
+++ b/src/app/secure/top-categories/top-categories.component.html
@@ -1,3 +1,9 @@
-<section>
-    <h1>Top</h1>
+<section class="m-2 page-content">
+  <h1 class="heading mt-3 mb-2">Top Categories</h1>
+  <div class="images-container flex pl-2 pr-2">
+    <div class="images-subcontainer flex column" *ngFor="let image of images">
+      <h6 class="pb-1">{{ image.name }}</h6>
+      <img src="{{ image?.path }}" alt="{{ image?.name }}" />
+    </div>
+  </div>
 </section>
