--- a/src/assets/styles/_color.scss
+++ b/src/assets/styles/_color.scss
@@ -1,7 +1,9 @@
 $header-bg: #3A3A3A;
 $white: #fff;
 $black: #000;
-$light-grey: #888;
+$grey: #888;
+$light-grey:#e6e6e6;
 $fb: #3b5998;
 $you-tube: #c4302b;
 $twitter: #00acee;
+$green: #008000
