--- a/src/app/secure/dashboard/dashboard.component.html
+++ b/src/app/secure/dashboard/dashboard.component.html
@@ -1,3 +1,6 @@
 <decor-header></decor-header>
-<decor-top-categories></decor-top-categories>
+<div class="mt-2 mb-2 ml-4 mr-4">
+    <decor-top-categories></decor-top-categories>
+    <decor-introduction></decor-introduction>
+</div>
 <decor-footer></decor-footer>
