--- a/src/app/secure/top-categories/top-categories.component.scss
+++ b/src/app/secure/top-categories/top-categories.component.scss
@@ -32,7 +32,7 @@ $border-width: 1.2rem;
     position: relative;
     color: $black;
     &:after {
-      border-bottom: 3px solid $light-grey;
+      border-bottom: 3px solid $grey;
       content: "";
       display: block;
       margin-left: 0;
