Add border radius

--- a/src/app/secure/introduction/introduction.component.html
+++ b/src/app/secure/introduction/introduction.component.html
@@ -1,5 +1,5 @@
-<section class="page-content flex">
-  <img src="../../../assets/images/intro-image.png" alt="ganesh-image" />
+<section class="page-content flex intro">
+  <img src="../../../assets/images/intro-image.png" alt="ganesh-image" class="pt-1 pb-1"/>
   <div class="ml-6 flex column justify-center">
     <div>
       <h4 class="font-light-bold small-letter-space">Welcome to our</h4>
