--- a/src/app/secure/introduction/introduction.component.scss
+++ b/src/app/secure/introduction/introduction.component.scss
@@ -1,28 +1,31 @@
 @import "index";
-img {
-  background: $light-grey;
-}
-.company-name {
-  font-size: 40px;
-}
+.intro {
+  img {
+    background: $light-grey;
+    border-radius: 20px;
+  }
+  .company-name {
+    font-size: 40px;
+  }
 
-p {
-  font-size: 1rem;
-  color: $grey;
-  line-height: 28px;
-}
-ul {
-  flex-basis: 50%;
-  list-style: none;
-  font-size: 1rem;
-  li {
-    line-height: 30px;
-    font-weight: 500;
-    &:before {
-      content: "✓";
-      color: $green;
-      margin-right: 0.5rem;
-      font-weight: bolder;
+  p {
+    font-size: 1rem;
+    color: $grey;
+    line-height: 28px;
+  }
+  ul {
+    flex-basis: 50%;
+    list-style: none;
+    font-size: 1rem;
+    li {
+      line-height: 30px;
+      font-weight: 500;
+      &:before {
+        content: "✓";
+        color: $green;
+        margin-right: 0.5rem;
+        font-weight: bolder;
+      }
     }
   }
 }
