Add product component

--- a/src/app/secure/dashboard/dashboard.component.html
+++ b/src/app/secure/dashboard/dashboard.component.html
@@ -2,5 +2,6 @@
 <div class="mt-2 mb-2 ml-4 mr-4">
     <decor-top-categories></decor-top-categories>
     <decor-introduction></decor-introduction>
+    <decor-product-list></decor-product-list>
 </div>
 <decor-footer></decor-footer>
