--- a/src/assets/styles/_layout.scss
+++ b/src/assets/styles/_layout.scss
@@ -91,6 +91,14 @@ $space-amounts: (0, 1, 2, 3, 4, 5, 6, 7, 8);
       color: #000;
     }
   }
+  .heading {
+    font-size: 40px;
+  }
+  p {
+    font-size: 1rem;
+    color: #888;
+    line-height: 28px;
+  }
 }
 .small-letter-space {
   letter-spacing: 0.8px;
