General component for heading

--- a/src/app/secure/top-categories/top-categories.component.html
+++ b/src/app/secure/top-categories/top-categories.component.html
@@ -1,5 +1,5 @@
 <section class="page-content">
-  <h1 class="heading mb-2">Top Categories</h1>
+  <decor-animated-heading [heading]="'Top Categories'"></decor-animated-heading>
   <div class="images-container flex">
     <div class="images-subcontainer flex column" *ngFor="let image of images">
       <h6 class="pb-1">{{ image.name }}</h6>
