--- a/src/app/secure/product-list/product-list.component.html
+++ b/src/app/secure/product-list/product-list.component.html
@@ -1,1 +1,3 @@
-<p>product-list works!</p>
+<div class="page-content">
+    <decor-animated-heading [heading]="'Featured Products'"></decor-animated-heading>
+</div>
