--- a/src/app/secure/dashboard/dashboard.component.html
+++ b/src/app/secure/dashboard/dashboard.component.html
@@ -1,7 +1,15 @@
 <decor-header></decor-header>
+<button
+  title="Scroll to top"
+  *ngIf="showScrollToTopButton"
+  class="scroll-to-top-btn cursor-pointer"
+  (click)="scrollToTop()"
+>
+  <i class="fa fa-arrow-up"></i>
+</button>
 <div class="mt-2 mb-2 ml-4 mr-4">
-    <decor-top-categories></decor-top-categories>
-    <decor-introduction></decor-introduction>
-    <decor-product-list></decor-product-list>
+  <decor-top-categories></decor-top-categories>
+  <decor-introduction></decor-introduction>
+  <decor-product-list></decor-product-list>
 </div>
 <decor-footer></decor-footer>
